--- a/hw1/makefile
+++ b/hw1/makefile
@@ -1,2 +1,2 @@
 main:
-	g++ -Wall -o unittest unittest.c -lgtest -lgtest_main -lpthread
+	g++ -fprofile-arcs -ftest-coverage -Wall -o unittest unittest.c -lgtest -lgtest_main -lpthread
